# mybots

myBots/: .cproject  .project
myBots/src/: BotClient.cpp  BotClient.h  BotConnect.cpp  BotConnect.h  BotHandler.h  BotLogic.cpp  BotLogic.h  BotLogic_old.cpps  BotLogic_old.hs  BotMiniMax.cpp  BotMiniMax.h  BotResume.h  BotsGame.cpp  BotsGame.h  BotsGl.cpp  BotsGl.h  CMakeLists.txt  FacadeNetwork.cpp  FacadeNetwork.h  IntelligentBot.cpp  IntelligentBot.h  MiniMaxState.cpp  MiniMaxState.h  botclient.cpp  botclient.h  main.cpp
myBots/src/bots/: bot.h  bots.cpp  bots.h
myBots/src/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_boost  test_boost.cpp
